# simple-redis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
callsystem/: __init__.py  apps.py  constants.py  dto.py  models.py  services.py  urls.py  views.py
callsystem/migrations/: 0001_initial.py
callsystem/templates/callsystem/: call_list.html
callsystem/tests/: __init__.py  factories.py  test_cache_service.py  test_dto.py  test_views.py
django_redis_demo/: __init__.py  settings.py  urls.py  wsgi.py
docs/: diagrama_sequencia.md
