[project]
name = "django-redis-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "redis>=5.0,<6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.8,<5.0",
    "taskipy>=1.12,<2.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_redis_demo.settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["callsystem/tests"]

[tool.taskipy.tasks]
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
run = "python manage.py runserver"
test = "pytest"
test-cov = "pytest --cov=callsystem --cov-report=term-missing -v"
